--- a/src/main/resources/templates/adminpage/adminDetail.html
+++ b/src/main/resources/templates/adminpage/adminDetail.html
@@ -12,7 +12,7 @@
 			<div class="mb-3 row">
 				<label class="col-sm-2 col-form-label">아이디</label>
 				<div  class="col-sm-10">
-					<input class="form-control-plaintext" readonly type="text" name="adminId" th:value="${adminDto.adminId}">
+					<input class="form-control-plaintext" readonly type="text" name="adminId" th:value="${adminDto.admin_id}">
 				</div>
 			</div>
 			<div class="mb-3 row">
