--- a/src/main/resources/templates/adminpage/userManagement.html
+++ b/src/main/resources/templates/adminpage/userManagement.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <header th:include="/adminpage/headerNav"></header>
+<script defer="defer" src="/js/admin/duplicateCheck.js"></script>
 <main class="container mx-auto mt-5" style="max-width: 80%;">
     <h1>회원 목록</h1>
     <form class="d-flex mb-3 mt-5" role="search" method="get" action="" style="max-width: 250px;">
