--- a/src/main/resources/templates/adminpage/couponList.html
+++ b/src/main/resources/templates/adminpage/couponList.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 	<script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
-  
     
 <title>Insert title here</title>
 </head>
@@ -56,7 +55,7 @@
                 
 			</thead>
 			<tbody>
-				<tr scope="row" class="" th:onclick="" th:each="coupon:${cpList}">
+				<tr scope="row" class="" th:onclick="" th:each="coupon:${paging.list}">
                      <th scope="row">
                         <label class="control control--checkbox">
                           <input type="checkbox"/>
@@ -129,6 +128,7 @@
                 
 			</tbody>
 		</table>
+		<th:block th:include="/adminpage/pageNav"></th:block>
     </div>
       </div>
   
