--- a/src/main/resources/templates/event/eventPage.html
+++ b/src/main/resources/templates/event/eventPage.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>이벤트 페이지</title>
 	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/css/event/eventPage.css">
 </head>
 <body>
@@ -28,12 +29,12 @@
 			<div class="tab_wrap" id="tab_wrap_id">
 				<ul id="tabUl" class="tab n2">
 					<li id="tabHead1" class="on">
-						<a href="#" id="tabHead1" title="선택됨">
+						<a href="#" id="tabHead1">
 							<span>진행중인 이벤트</span>
 						</a>
 					</li>
 					<li id="tabHead2">
-						<a href="#" id="tabHead2" title="">
+						<a href="#" id="tabHead2">
 							<span>종료된 이벤트</span>
 						</a>
 					</li>
@@ -41,24 +42,24 @@
 				<div class="evt_wrap">
 					<ul class="evt_list">
 						<li>
-							<a href="">
-								<div class="img"><img alt="주말 특가" src=""></div>
+							<a href="#">
+								<div class="img1"><img alt="주말 특가" src=""></div>
 								<strong><span>국내선 주말 특가</span></strong>
 								<p class="sbj_sub">단, 3일간 국내선 특별 할인</p>
 								<p>2022-10-28 ~ 2022-10-30</p>
 							</a>
 						</li>
 						<li>
-							<a href="">
-								<div class="img"><img alt="주말 특가" src=""></div>
+							<a href="#">
+								<div class="img2"><img alt="주말 특가" src=""></div>
 								<strong><span>국내선 주말 특가</span></strong>
 								<p class="sbj_sub">단, 3일간 국내선 특별 할인</p>
 								<p>2022-10-28 ~ 2022-10-30</p>
 							</a>
 						</li>
 						<li>
-							<a href="">
-								<div class="img"><img alt="주말 특가" src=""></div>
+							<a href="#">
+								<div class="img3"><img alt="주말 특가" src=""></div>
 								<strong><span>국내선 주말 특가</span></strong>
 								<p class="sbj_sub">단, 3일간 국내선 특별 할인</p>
 								<p>2022-10-28 ~ 2022-10-30</p>
