--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -14,8 +14,7 @@
 			</div>
 			<div class="gnb">
 				<a href="/search/flightsearch.do">예매</a>
-				<a href="/event/eventPage.do">이벤트</a>
-				<a href="#">고객센터</a>
+				<a href="#">이벤트</a>
 				<a href="#">항공편 현황</a>
 			</div>
 			<div class="lnb">
@@ -23,7 +22,6 @@
 	            <a href="#">로그아웃</a>	            
 	            <a href="/signup/joinPage.do">회원가입</a>
 				<a href="#">마이페이지</a>
-				<a href="#">전체메뉴</a>
 			</div>
 	</nav>
 </body>
