--- a/src/main/resources/templates/reservation/reservationSearch.html
+++ b/src/main/resources/templates/reservation/reservationSearch.html
@@ -116,7 +116,7 @@
                                                            for="depart_airport">출발지
                                                     </label>
                                                     <select class="form-select selector_box" id="depart_airport"
-                                                            name="depAprt">
+                                                            name="rvDepartAp">
                                                         <option th:each="i : ${airportList}"
                                                                 th:text="${i.airportId}"
                                                                 th:value="${i.airportId}">DAN1
@@ -128,7 +128,7 @@
                                                            for="land_airport">도착지
                                                     </label>
                                                     <select class="form-select selector_box" id="land_airport"
-                                                            name="landAprt">
+                                                            name="rvLandAp">
                                                         <option th:each="i : ${airportList}"
                                                                 th:text="${i.airportId}"
                                                                 th:value="${i.airportId}">DAN1
@@ -138,7 +138,7 @@
                                                 <div class="plan_date selector_option">
                                                     <label class="sub-airport-tit" for="depart_date">탑승일</label>
                                                     <input class="depart_date selector_box" id="depart_date"
-                                                           name="depDate" pattern="yyyymmdd" type="date">
+                                                           name="rvDate" pattern="yyyymmdd" type="date">
                                                 </div>
                                             </div>
                                             <div class="passenger_count">
@@ -147,8 +147,8 @@
                                                     <div aria-label="Basic example" class="btn-group" role="group">
                                                         <button class="btn btn-primary" type="button">-</button>
                                                         <div class="input_container">
-                                                            <input id="adult_count" name="adultCnt" type="text"
-                                                                   value="1">
+                                                            <input id="adult_count" name="rvMatureAdult" type="text"
+                                                                   value="1" >
                                                         </div>
                                                         
                                                         <button class="btn btn-primary" type="button">+</button>
@@ -159,7 +159,7 @@
                                                     <div aria-label="Basic example" class="btn-group" role="group">
                                                         <button class="btn btn-primary" type="button">-</button>
                                                         <div class="input_container">
-                                                            <input id="teen_count" name="teenCnt" type="text"
+                                                            <input id="teen_count" name="rvMatureTeen" type="text"
                                                                    value="0">
                                                         </div>
                                                         
@@ -171,7 +171,7 @@
                                                     <div aria-label="Basic example" class="btn-group" role="group">
                                                         <button class="btn btn-primary" type="button">-</button>
                                                         <div class="input_container">
-                                                            <input id="baby_count" name="babyCnt" type="text"
+                                                            <input id="baby_count" name="rvMatureBaby" type="text"
                                                                    value="0">
                                                         </div>
                                                         <button class="btn btn-primary" type="button">+</button>
@@ -213,23 +213,23 @@
         <!--// 구간선택 -->
         <div id="layer_availability_list">
             <form action="/reservation/book" id="rform" method="post">
-                <div class="sel_date_wrap">
-                    <!--날짜 선택 슬라이드 -->
-                    <div class="sel_date_slide swiper-container route_all route_1 swiper-container-horizontal"
-                         id="price_slider_1" style="display: block;">
-                        <ul class="swiper-wrapper">
-                            <li class="swiper-slide lowestFare swiper-slide-duplicate swiper-slide-prev"
-                                th:each="i :${#numbers.sequence(-1, 1)}">
-                            <a class="sel_date_box" href="#" title="여정 선택하기">
-                                <span class="date">MM-dd(요일)</span>
-                                <span class="price">xx,xxx</span>
-                            </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <a class="btn_slide_prev price_slider_1" href="#" style="display: block;">이전</a>
-                    <a class="btn_slide_next price_slider_1" href="#" style="display: block;">다음</a>
-                </div>
+                <!-- <div class="sel_date_wrap"> -->
+                <!--     &lt;!&ndash;날짜 선택 슬라이드 &ndash;&gt; -->
+                <!--     <div class="sel_date_slide swiper-container route_all route_1 swiper-container-horizontal" -->
+                <!--          id="price_slider_1" style="display: block;"> -->
+                <!--         <ul class="swiper-wrapper"> -->
+                <!--             <li class="swiper-slide lowestFare swiper-slide-duplicate swiper-slide-prev" -->
+                <!--                 th:each="i :${#numbers.sequence(-1, 1)}"> -->
+                <!--             <a class="sel_date_box" href="#" title="여정 선택하기"> -->
+                <!--                 <span class="date">MM-dd(요일)</span> -->
+                <!--                 <span class="price">xx,xxx</span> -->
+                <!--             </a> -->
+                <!--             </li> -->
+                <!--         </ul> -->
+                <!--     </div> -->
+                <!--     <a class="btn_slide_prev price_slider_1" href="#" style="display: block;">이전</a> -->
+                <!--     <a class="btn_slide_next price_slider_1" href="#" style="display: block;">다음</a> -->
+                <!-- </div> -->
                 <!-- 구간 리스트 -->
                 
                 <div class="section_list_wrap">
@@ -274,15 +274,14 @@
                                         <div class="service_name first">
                                             <strong class="tit" th:text="${airflight.depPlandTime}">HH:mm</strong>
                                             <span class="addition" th:text="${airflight.depAirportNm}">출발지</span>
+                                            <input type="hidden" name="rvDepartAp" th:value="${airflight.depAirportNm}">
                                         </div>
                                         <div class="service_exp">
-                                            <p class="top">
-                                                (HH)h (mm)m
-                                            </p>
                                         </div>
                                         <div class="service_name last">
                                             <strong class="tit" th:text="${airflight.arrPlandTime}">HH:mm</strong>
                                             <span class="addition" th:text="${airflight.arrAirportNm}">도착지</span>
+                                            <input type="hidden" name="rvDepartAp" th:value="${airflight.arrAirportNm}">
                                         </div>
 
                                     </div>
@@ -290,7 +289,7 @@
                                         <div class="class normal">이코노미</div>
                                         <span class="unit" th:if="${airflight.economyCharge != '0'}">KRW</span>
                                         <strong class="price" th:if="${airflight.economyCharge != '0'}"
-                                                th:text="${airflight.economyCharge}">xx,xxx</strong>
+                                                th:text="${airflight.economyCharge}" >xx,xxx</strong>
                                         <strong class="price" th:text="매진"
                                                 th:unless="${airflight.economyCharge != '0'}">xx,xxx</strong>
                                     </div>
@@ -320,9 +319,9 @@
                                         <div class="rate_box fareType normal">
                                             <div class="select_rate">
                                                 <label class="float_item">
-                                                    <input class="form-check-input" id="seatGrade2" name="seatGrade"
-                                                           type="radio">
-                                                    <label class="form-check-label" for="seatGrade2">일반 운임</label>
+                                                    <input class="form-check-input" id="normal" name="rvSeatGrade"
+                                                           type="radio" th:value="${airflight.economyCharge}">
+                                                    <label class="form-check-label" for="normal">일반 운임</label>
                                                 </label>
                                                 <a class="btn_tooltip alertIcon" href="#"></a>
                                             </div>
@@ -351,9 +350,9 @@
                                         <div class="rate_box fareType business">
                                             <div class="select_rate">
                                                 <label class="float_item">
-                                                    <input class="form-check-input" id="seatGrade3" name="seatGrade"
-                                                           type="radio">
-                                                    <label class="form-check-label" for="seatGrade3">비즈니스 운임</label>
+                                                    <input class="form-check-input" id="business" name="rvSeatGrade"
+                                                           type="radio" th:value="airflight.prestigeCharge">
+                                                    <label class="form-check-label" for="business">비즈니스 운임</label>
                                                 </label>
                                                 <a class="btn_tooltip alertIcon" href="#"></a>
                                             </div>
