--- a/src/main/resources/templates/reservation/baggage.html
+++ b/src/main/resources/templates/reservation/baggage.html
@@ -1,165 +1,151 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" th:href="@{/css/reservation/baggage.css}">
-<link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css}" />
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/reservation/baggage.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css}"/>
+    <title>Insert title here</title>
 </head>
 <body>
-	<header th:include="/headerNav"></header>
-	<div class="container">
-		<div class="head">
-			<h2>항공권 예매</h2>
-		</div>
-
-		<div class="body">
-			<div class="sel_service_section">
-
-				<div class="service_section_wrap service_section_wrap--simple">
-
-					<!-- 구간선택 슬라이드 -->
-					<div class="service_section_slide swiper-container swiper-container-horizontal">
-
-						<ul class="swiper-wrapper" id="routeSlider">
-							<li class="swiper-slide swiper-slide-duplicate swiper-slide-active swiper-slide-duplicate-prev" id="route_1">
-								<!-- 구간선택 박스 -->
-								<div class="service_section_box">
-									<!-- 구간 -->
-									<span class="bul_section">구간1</span>
-									<!--// 구간 -->
-									<!-- 출발 -->
-									<div class="service_name first">
-										<strong class="tit airport departure">GMP</strong> <span class="addition">서울/김포</span>
-									</div>
-									<!-- 출발 -->
-									<!-- 설명 -->
-									<div class="service_exp"></div>
-									<!--// 설명 -->
-									<!-- 도착 -->
-									<div class="service_name last">
-										<strong class="tit airport arrival">CJU</strong> <span class="addition">제주</span>
-									</div>
-									<!-- 도착 -->
-								</div>
-							</li>
-							<!--// 구간선택 박스 -->
-						</ul>
-					</div>
-					<!--// 구간선택 슬라이드 -->
-
-
-					<!-- 여정 재검색 -->
-					<div class="btn_refresh">
-						<button class="btn_small refresh red">재검색</button>
-					</div>
-					<!--// 여정 재검색 -->
-
-					<!-- 슬라이드 버튼 -->
-					<a class="btn_slide_prev" href="#">이전</a> <a class="btn_slide_next" href="#">다음</a>
-					<!--// 슬라이드 버튼 -->
-					<!-- 구간 더보기 -->
-					<div class="swiper-pagination-wrapper">
-						<div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
-							<span class="swiper-pagination-bullet swiper-pagination-bullet-active" role="button"></span>
-						</div>
-					</div>
-					<!--// 구간 더보기 -->
-				</div>
-			</div>
-			<div class="person_choice">
-				<h3>수하물</h3>
-				<!-- Slider main container -->
-				<div class="swiper2">
-					<!-- Additional required wrapper -->
-					<div id="secondSwiper" class="sel_passenger_slide swiper-container">
-						<ul class="swiper-wrapper">
-							<li class="swiper-slide">
-								<div class="p_box">
-									<i class="num">1</i>
-									<div class="name">
-										<p class="last" th:text="${session.pSession.p[0].pgLastName}"></p>
-										<p class="first" th:text="${session.pSession.p[0].pgFirstName}"></p>
-									</div>
-									<div class="add_price">
-										<p>
-											<span id="p_bweight">15</span>kg
-										</p>
-										<p>KRW 0</p>
-									</div>
-								</div>
-							</li>
-							<li class="swiper-slide">
-								<div class="p_box">
-									<i class="num">2</i>
-									<div class="name">
-										<p class="first">곰</p>
-										<p class="last">수이</p>
-									</div>
-									<div class="add_price">
-										<p>15kg</p>
-										<p>KRW 0</p>
-									</div>
-								</div>
-							</li>
-							<li class="swiper-slide">
-								<div class="p_box">
-									<i class="num">3</i>
-									<div class="name">
-										<p class="last" th:text="${session.pSession.p[1].pgLastName}"></p>
-										<p class="first" th:text="${session.pSession.p[1].pgFirstName}"></p>
-									</div>
-									<div class="add_price">
-										<p>15kg</p>
-										<p>KRW 0</p>
-									</div>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<a class="btn_slide_prev">이전</a> <a class="btn_slide_next">다음</a>
-				</div>
-			</div>
-			<div class="baggage_area">
-				<div class="range_slider">
-					<div class="range_slider_info">
-						<dl class="weight">
-							<dt>
-								<span class="blind"></span>
-							</dt>
-							<dd>
-								<span id="b_weight">15</span>KG
-							</dd>
-						</dl>
-						<dl class="price">
-							<dt>
-								<span>KRW</span>
-							</dt>
-							<dd>
-								<span>0</span>
-							</dd>
-						</dl>
-					</div>
-					<div class="slidecontainer">
-						<form id="rform" action="/reservation/baggage" method="post">
-							<input type="range" min="15" max="30" step="5" value="15" class="slider" id="myRange">
-							<input type="number" name="p[0].pgBaggage" id="b_value">
-							<div class="kgInfo">
-								<div>15kg</div>
-								<div>20kg</div>
-								<div>25kg</div>
-								<div>30kg</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<footer id="r_footer" th:include="/reservation/rFooter"></footer>
-	<footer id="footer" th:include="/footerNav"></footer>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-	<script src="/js/reservation/baggage.js"></script>
+<header th:include="/headerNav"></header>
+<div class="container">
+    <div class="head">
+        <h2>항공권 예매</h2>
+    </div>
+    
+    <div class="body">
+        <div class="sel_service_section">
+            
+            <div class="service_section_wrap service_section_wrap--simple">
+                
+                <!-- 구간선택 슬라이드 -->
+                <div class="service_section_slide swiper-container swiper-container-horizontal">
+                    
+                    <ul class="swiper-wrapper" id="routeSlider">
+                        <li class="swiper-slide swiper-slide-duplicate swiper-slide-active swiper-slide-duplicate-prev"
+                            id="route_1">
+                            <!-- 구간선택 박스 -->
+                            <div class="service_section_box">
+                                <!-- 구간 -->
+                                <span class="bul_section">구간1</span>
+                                <!--// 구간 -->
+                                <!-- 출발 -->
+                                <div class="service_name first">
+                                    <strong class="tit airport departure">GMP</strong>
+                                    <span class="addition">서울/김포</span>
+                                </div>
+                                <!-- 출발 -->
+                                <!-- 설명 -->
+                                <div class="service_exp"></div>
+                                <!--// 설명 -->
+                                <!-- 도착 -->
+                                <div class="service_name last">
+                                    <strong class="tit airport arrival">CJU</strong>
+                                    <span class="addition">제주</span>
+                                </div>
+                                <!-- 도착 -->
+                            </div>
+                        </li>
+                        <!--// 구간선택 박스 -->
+                    </ul>
+                </div>
+                <!--// 구간선택 슬라이드 -->
+                
+                
+                <!-- 여정 재검색 -->
+                <div class="btn_refresh">
+                    <button class="btn_small refresh red">재검색</button>
+                </div>
+                <!--// 여정 재검색 -->
+                
+                <!-- 슬라이드 버튼 -->
+                <a class="btn_slide_prev" href="#">이전</a>
+                <a class="btn_slide_next" href="#">다음</a>
+                <!--// 슬라이드 버튼 -->
+                <!-- 구간 더보기 -->
+                <div class="swiper-pagination-wrapper">
+                    <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
+                        <span class="swiper-pagination-bullet swiper-pagination-bullet-active" role="button"></span>
+                    </div>
+                </div>
+                <!--// 구간 더보기 -->
+            </div>
+        </div>
+        
+        <div class="person_choice">
+            <h3>수하물</h3>
+            <!-- Slider main container -->
+            <div class="swiper2">
+                <!-- Additional required wrapper -->
+                <form action="/reservation/baggage" id="rform" method="post">
+                    <div class="sel_passenger_slide swiper-container" id="secondSwiper">
+                        <ul class="swiper-wrapper">
+                            <li class="swiper-slide passenger" th:each="i: ${#numbers.sequence(0, 3)}"
+                                th:id="'passenger_'+${i}" th:if="${i < session.pSession.getP().size()}">
+                                <div class="p_box">
+                                    <i class="num" th:text="${i+1}">1</i>
+                                    <div class="name">
+                                        <p class="last" th:text="${session.pSession.getP().get(i).pgLastName}"></p>
+                                        <p class="first" th:text="${session.pSession.getP().get(i).pgFirstName}"></p>
+                                    </div>
+                                    <div class="add_price">
+                                        <p>
+                                            <input type="hidden" th:name="'p['+${i}+'].pgBaggage'" th:id="'baggage_value_'+${i}" value="15">
+                                            <span th:id="'p_bweight_'+${i}">15</span>
+                                            kg
+                                        </p>
+                                        <p>KRW 0</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </form>
+                <a class="btn_slide_prev">이전</a>
+                <a class="btn_slide_next">다음</a>
+            </div>
+        </div>
+        <div class="baggage_area">
+            <div class="range_slider">
+                <div class="range_slider_info">
+                    <dl class="weight">
+                        <dt>
+                            <span class="blind"></span>
+                        </dt>
+                        <dd>
+                            <span id="b_weight">15</span>
+                            KG
+                        </dd>
+                    </dl>
+                    <dl class="price">
+                        <dt>
+                            <span>KRW</span>
+                        </dt>
+                        <dd>
+                            <span>0</span>
+                        </dd>
+                    </dl>
+                </div>
+                <div class="slidecontainer">
+                    
+                    <input class="slider" id="myRange" max="30" min="15" step="5" type="range" value="15">
+                    <!-- <input type="number" name="p[0].pgBaggage" id="b_value"> -->
+                    <div class="kgInfo">
+                        <div>15kg</div>
+                        <div>20kg</div>
+                        <div>25kg</div>
+                        <div>30kg</div>
+                    </div>
+                
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer id="r_footer" th:include="/reservation/rFooter"></footer>
+<footer id="footer" th:include="/footerNav"></footer>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+<script src="/js/reservation/baggage.js"></script>
 </body>
 </html>
