--- a/src/main/resources/templates/reservation/passenger.html
+++ b/src/main/resources/templates/reservation/passenger.html
@@ -64,7 +64,7 @@
 													<th class="type">생년월일</th>
 													<td class="input_wrap">
 														<div>
-														<input type="date" name="p[0].pgBirth" style="display:none;">
+														<input type="date" name="pgBirth">
 															<select class="w170" name="selbox" th:onchange="selectDate(this)">
 																<option value="" >YYYY</option>
 																<option value="2009">2009</option>
