--- a/src/main/resources/templates/reservation/baggage.html
+++ b/src/main/resources/templates/reservation/baggage.html
@@ -142,8 +142,9 @@
 					</div>
 					<div class="slidecontainer">
 						<form id="rform" action="/reservation/baggage" method="post">
-							<input type="range" min="15" max="30" step="5" value="15" name="p[0].pgBaggage" class="slider" id="myRange">
-							
+							<input type="range" min="15" max="30" step="5" value="15" class="slider" id="myRange">
+							<input type="hidden" value="8000" name="pgBaggage">
+							<input type="hidden" value="9000" name="pgBaggage">
 							<div class="kgInfo">
 								<div>15kg</div>
 								<div>20kg</div>
