--- a/src/main/resources/templates/login/findUserId.html
+++ b/src/main/resources/templates/login/findUserId.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<script defer="defer" src="/js/find/findId.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <head>
 <meta charset="UTF-8">
 <title>아이디 찾은 페이지</title>
@@ -12,7 +14,7 @@
 			<div>
 				<p>고객정보와 일치하는 아이디</p>
 					<p class="d-flex justify-content-center m-5">
-						<strong class="fs-3"></strong>
+						<strong class="fs-3" ></strong>
 					</p>	
 			</div>
 		</div>	
