--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -13,7 +13,7 @@
 				<a href="/">JB항공</a>
 			</div>
 			<div class="gnb">
-				<a href="/search/flightsearch.do">예매</a>
+				<a href="/reservation/flightsearch.do">예매</a>
 				<a href="#">이벤트</a>
 				<a href="#">항공편 현황</a>
 			</div>
