--- a/src/main/resources/static/css/event/eventPage.css
+++ b/src/main/resources/static/css/event/eventPage.css
@@ -18,7 +18,9 @@ a {
     color: #222;
 }
 
-
+.container{
+	padding: 0;
+}
 
 .main_tit_wrap .main_tit {
     font-size: 28px;
@@ -48,8 +50,94 @@ a {
 	box-sizing: border-box;
 }
 
-.tab_wrap {
-    margin-bottom: 50px;
-    display: unset;
+.btn_prev{
+	float: left;
+    width: 39px;
+    height: 39px;
+    background: url(//contents-image.twayair.com/homepage/images/main/btn_goods_prev.png) 0px 0px no-repeat;
+    text-indent: -9999px;
+	
 }
-  
+.btn_next{
+	float: right;
+    width: 39px;
+    height: 39px;
+    background: url(//contents-image.twayair.com/homepage/images/main/btn_goods_next.png) 0px 0px no-repeat;
+    text-indent: -9999px;
+}
+
+.tab_wrap {
+    width: 100%;
+}
+.tab{
+	display: flex;
+	margin: auto;
+	padding: 0;
+}
+.tab li{
+	flex: 1;
+	text-align: center;
+	margin: 40px;
+}
+.tab li.on {
+    background-color: rgb(255, 255, 255);
+    border-top: 4px solid rgb(210, 44, 38);
+    border-bottom: 0px;
+}
+.tab li.on a {
+    font-weight: 700;
+    color: rgb(210, 44, 38);
+    border-bottom: 0px;
+    font-size: 18px;
+}
+
+.evt_wrap{
+	width: 100%;
+	height: 370px;
+	padding: 0 0 0 47px;
+}
+.evt_list{
+	display: flex;
+	margin: auto;
+	padding: 0;
+}
+.evt_list li{
+	flex: 1;
+	height: 320px;
+
+}
+
+/* 팝업창 */
+.pop_wrap{
+	position:fixed; 
+	top:0; 
+	left:0; 
+	right:0; 
+	bottom:0; 
+	background:rgba(0,0,0,.5); 
+	font-size:0; 
+	text-align:center;
+}
+.pop_wrap:after{
+	display:inline-block; 
+	height:100%; 
+	vertical-align:middle; 
+	content:'';
+}
+.pop_wrap .pop_inner{
+	display:inline-block; 
+	padding:30px; 
+	background:#fff; 
+	width:400px; 
+	height:400px;
+	vertical-align:middle; 
+	font-size:15px;
+}
+.select_coupon{
+	height: 200px;
+}
+.btn_receive, .btn_close{
+	width: 30%;
+	background: black;
+	color: white; 
+}
