--- a/src/main/resources/templates/reservation/reservationPay.html
+++ b/src/main/resources/templates/reservation/reservationPay.html
@@ -9,6 +9,7 @@
 <script defer="defer" src="/js/reservation/pay.js"></script>
 </head>
 <body>
+<header th:include="/headerNav"></header>
 	<div class="container mt-5 p-2">
 		<h6>쿠폰 사용</h6>
 		<button type="button" class="btn btn-dark px-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -63,7 +64,7 @@
 		<h6>결제 정보</h6>
 		<div class="d-flex justify-content-between pt-2" style="background:  #eee;">
 			<p class=" ps-3"><strong>주문 금액</strong></p>
-			<p class="pe-3">KRW 93,700</p>
+			<p class="pe-3" >KRW 93,700</p>
 		</div>
 		<div class="d-flex justify-content-between pt-2" style="background:  #eee;">
 			<p class=" ps-3"><strong>쿠폰 할인 금액</strong></p>
