--- a/src/main/resources/templates/reservation/reservationPayComplete.html
+++ b/src/main/resources/templates/reservation/reservationPayComplete.html
@@ -8,6 +8,7 @@
 <script th:src="@{/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </head>
 <body>
+<header th:include="/headerNav"></header>
 	<div class="container mt-5">
 		<div class="d-flex ">
 			<div class="">
