--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="gnb">
 				<a href="/reservation/flightsearch.do">예매</a>
-				<a href="#">이벤트</a>
+				<a href="/event/eventPage.do">이벤트</a>
 				<a href="/main/airplaneStatus.do">항공편 현황</a>
 			</div>
 			<div class="lnb">
